docker-images/syntax-highlighter/crates/sg-syntax/src/snapshots/sg_syntax__sg_sciptect__test__.__larger.cs.snap
---
source: crates/sg-syntax/src/sg_sciptect.rs
assertion_line: 539
expression: "dump_document(&document, &contents)"
---
  // Original:
//  ^^^^^^^^^^ Comment
  // repo:^github\.com/radzenhq/radzen-blazor$ file:^Radzen\.Blazor\.Tests/DataGridTests\.cs
//^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Comment
  
  using AngleSharp.Dom;
//^^^^^ IdentifierKeyword
//      ^^^^^^^^^^ IdentifierNamespace
//                 ^^^ IdentifierNamespace
  using Bunit;
//^^^^^ IdentifierKeyword
//      ^^^^^ IdentifierNamespace
  using Microsoft.AspNetCore.Components;
//^^^^^ IdentifierKeyword
//      ^^^^^^^^^ IdentifierNamespace
//                ^^^^^^^^^^ IdentifierNamespace
//                           ^^^^^^^^^^ IdentifierNamespace
  using Microsoft.AspNetCore.Components.Rendering;
//^^^^^ IdentifierKeyword
//      ^^^^^^^^^ IdentifierNamespace
//                ^^^^^^^^^^ IdentifierNamespace
//                           ^^^^^^^^^^ IdentifierNamespace
//                                      ^^^^^^^^^ IdentifierNamespace
  using System;
//^^^^^ IdentifierKeyword
//      ^^^^^^ IdentifierNamespace
  using System.Collections.Generic;
//^^^^^ IdentifierKeyword
//      ^^^^^^ IdentifierNamespace
//             ^^^^^^^^^^^ IdentifierNamespace
//                         ^^^^^^^ IdentifierNamespace
  using System.Linq;
//^^^^^ IdentifierKeyword
//      ^^^^^^ IdentifierNamespace
//             ^^^^ IdentifierNamespace
  using System.Text.RegularExpressions;
//^^^^^ IdentifierKeyword
//      ^^^^^^ IdentifierNamespace
//             ^^^^ IdentifierNamespace
//                  ^^^^^^^^^^^^^^^^^^ IdentifierNamespace
  using Xunit;
//^^^^^ IdentifierKeyword
//      ^^^^^ IdentifierNamespace
  namespace Radzen.Blazor.
//^^^^^^^^^ IdentifierNamespace
  {
      public class DataGridTests
//           ^^^^^ IdentifierType
      {
          // Css classes tests
//        ^^^^^^^^^^^^^^^^^^^^ Comment
          [Fact]
//         ^^^^ Identifier
          public void DataGrid_Renders_CssClass()
//               ^^^^ IdentifierType
//                    ^^^^^^^^^^^^^^^^^^^^^^^^^ IdentifierFunction
          {
              using var ctx = new TestContext();
//                  ^^^ Identifier
//                      ^^^ Identifier
//                          ^ IdentifierOperator
//                            ^^^ IdentifierOperator
              ctx.JSInterop.Mode = JSRuntimeMode.Loose;
//            ^^^ Identifier
//                ^^^^^^^^^ Identifier
//                          ^^^^ Identifier
//                               ^ IdentifierOperator
//                                 ^^^^^^^^^^^^^ Identifier
//                                               ^^^^^ Identifier
              ctx.JSInterop.SetupModule("_content/Radzen.Blazor/Radzen.Blazor.js");
//            ^^^ Identifier
//                ^^^^^^^^^ Identifier
//                          ^^^^^^^^^^^ Identifier
//                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ StringLiteral
              var component = ctx.RenderComponent<RadzenGrid<dynamic>>(parameterBuilder =>
//            ^^^ IdentifierType
//                ^^^^^^^^^ Identifier
//                          ^ IdentifierOperator
//                            ^^^ Identifier
//                                ^^^^^^^^^^^^^^^ Identifier
//                                                                     ^^^^^^^^^^^^^^^^ Identifier
//                                                                                      ^^ IdentifierType
              {
                  parameterBuilder.Add<IEnumerable<dynamic>>(p => p.Data, new[] { new { Id = 1 }, new { Id = 2 }, new { Id = 3 } });
//                ^^^^^^^^^^^^^^^^ Identifier
//                                 ^^^ Identifier
//                                                           ^ Identifier
//                                                             ^^ IdentifierType
//                                                                ^ Identifier
//                                                                  ^^^^ Identifier
//                                                                        ^^^ IdentifierOperator
//                                                                                ^^^ IdentifierOperator
//                                                                                      ^^ Identifier
//                                                                                         ^ IdentifierOperator
//                                                                                           ^ NumericLiteral
//                                                                                                ^^^ IdentifierOperator
//                                                                                                      ^^ Identifier
//                                                                                                         ^ IdentifierOperator
//                                                                                                           ^ NumericLiteral
//                                                                                                                ^^^ IdentifierOperator
//                                                                                                                      ^^ Identifier
//                                                                                                                         ^ IdentifierOperator
//                                                                                                                           ^ NumericLiteral
                  parameterBuilder.Add<RenderFragment>(p => p.Columns, builder =>
//                ^^^^^^^^^^^^^^^^ Identifier
//                                 ^^^ Identifier
//                                                     ^ Identifier
//                                                       ^^ IdentifierType
//                                                          ^ Identifier
//                                                            ^^^^^^^ Identifier
//                                                                     ^^^^^^^ Identifier
//                                                                             ^^ IdentifierType
                  {
                      builder.OpenComponent(0, typeof(RadzenGridColumn<dynamic>));
//                    ^^^^^^^ Identifier
//                            ^^^^^^^^^^^^^ Identifier
//                                          ^ NumericLiteral
//                                             ^^^^^^ IdentifierOperator
                      builder.AddAttribute(1, "Property", "Id");
//                    ^^^^^^^ Identifier
//                            ^^^^^^^^^^^^ Identifier
//                                         ^ NumericLiteral
//                                            ^^^^^^^^^^ StringLiteral
//                                                        ^^^^ StringLiteral
                      builder.CloseComponent();
//                    ^^^^^^^ Identifier
//                            ^^^^^^^^^^^^^^ Identifier
                  });
              });
  
              // Main
//            ^^^^^^^ Comment
              Assert.Contains(@$"rz-datatable-scrollable-wrapper", component.Markup);
//            ^^^^^^ Identifier
//                   ^^^^^^^^ Identifier
//                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ StringLiteral
//                                                                 ^^^^^^^^^ Identifier
//                                                                           ^^^^^^ Identifier
              Assert.Contains(@$"rz-datatable-scrollable-view", component.Markup);
//            ^^^^^^ Identifier
//                   ^^^^^^^^ Identifier
//                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ StringLiteral
//                                                              ^^^^^^^^^ Identifier
//                                                                        ^^^^^^ Identifier
  
              var component = ctx.RenderComponent<RadzenGrid<dynamic>>(parameterBuilder =>
//            ^^^ IdentifierType
//                ^^^^^^^^^ Identifier
//                          ^ IdentifierOperator
//                            ^^^ Identifier
//                                ^^^^^^^^^^^^^^^ Identifier
//                                                                     ^^^^^^^^^^^^^^^^ Identifier
//                                                                                      ^^ IdentifierType
              {
                  parameterBuilder.Add<IEnumerable<dynamic>>(p => p.Data, new[] { new { Id = 1 }, new { Id = 2 }, new { Id = 3 } });
//                ^^^^^^^^^^^^^^^^ Identifier
//                                 ^^^ Identifier
//                                                           ^ Identifier
//                                                             ^^ IdentifierType
//                                                                ^ Identifier
//                                                                  ^^^^ Identifier
//                                                                        ^^^ IdentifierOperator
//                                                                                ^^^ IdentifierOperator
//                                                                                      ^^ Identifier
//                                                                                         ^ IdentifierOperator
//                                                                                           ^ NumericLiteral
//                                                                                                ^^^ IdentifierOperator
//                                                                                                      ^^ Identifier
//                                                                                                         ^ IdentifierOperator
//                                                                                                           ^ NumericLiteral
//                                                                                                                ^^^ IdentifierOperator
//                                                                                                                      ^^ Identifier
//                                                                                                                         ^ IdentifierOperator
//                                                                                                                           ^ NumericLiteral
                  parameterBuilder.Add<RenderFragment>(p => p.Columns, builder =>
//                ^^^^^^^^^^^^^^^^ Identifier
//                                 ^^^ Identifier
//                                                     ^ Identifier
//                                                       ^^ IdentifierType
//                                                          ^ Identifier
//                                                            ^^^^^^^ Identifier
//                                                                     ^^^^^^^ Identifier
//                                                                             ^^ IdentifierType
                  {
                      builder.OpenComponent(0, typeof(RadzenGridColumn<dynamic>));
//                    ^^^^^^^ Identifier
//                            ^^^^^^^^^^^^^ Identifier
//                                          ^ NumericLiteral
//                                             ^^^^^^ IdentifierOperator
                      builder.AddAttribute(1, "Property", "Id");
//                    ^^^^^^^ Identifier
//                            ^^^^^^^^^^^^ Identifier
//                                         ^ NumericLiteral
//                                            ^^^^^^^^^^ StringLiteral
//                                                        ^^^^ StringLiteral
                      builder.CloseComponent();
//                    ^^^^^^^ Identifier
//                            ^^^^^^^^^^^^^^ Identifier
                  });
              });
  
              var markup = new Regex(@"\s\s+").Replace(component.Markup, "").Trim();
//            ^^^ IdentifierType
//                ^^^^^^ Identifier
//                       ^ IdentifierOperator
//                         ^^^ IdentifierOperator
//                                   ^^^^^^^^ StringLiteral
//                                             ^^^^^^^ Identifier
//                                                     ^^^^^^^^^ Identifier
//                                                               ^^^^^^ Identifier
//                                                                       ^^ StringLiteral
//                                                                           ^^^^ Identifier
              Assert.Contains(@$"""rz-cell-data"">1", markup);
//            ^^^^^^ Identifier
//                   ^^^^^^^^ Identifier
//                            ^^^ StringLiteral
//                               ^^ StringLiteralEscape
//                                 ^^^^^^^^^^^^ StringLiteral
//                                             ^^ StringLiteralEscape
//                                               ^^^ StringLiteral
//                                                    ^^^^^^ Identifier
              Assert.Contains(@$"""rz-cell-data"">2", markup);
//            ^^^^^^ Identifier
//                   ^^^^^^^^ Identifier
//                            ^^^ StringLiteral
//                               ^^ StringLiteralEscape
//                                 ^^^^^^^^^^^^ StringLiteral
//                                             ^^ StringLiteralEscape
//                                               ^^^ StringLiteral
//                                                    ^^^^^^ Identifier
              Assert.Contains(@$"""rz-cell-data"">3", markup);
//            ^^^^^^ Identifier
//                   ^^^^^^^^ Identifier
//                            ^^^ StringLiteral
//                               ^^ StringLiteralEscape
//                                 ^^^^^^^^^^^^ StringLiteral
//                                             ^^ StringLiteralEscape
//                                               ^^^ StringLiteral
//                                                    ^^^^^^ Identifier
              Assert.Contains(@"
//            ^^^^^^ Identifier
//                   ^^^^^^^^ Identifier
  Lorem Ipsum
  ", component.Markup);
//   ^^^^^^^^^ Identifier
//             ^^^^^^ Identifier
          }
      }
  }

