docker-images/syntax-highlighter/crates/sg-syntax/src/snapshots/sg_syntax__sg_sciptect__test__.__markdown.md.snap
---
source: crates/sg-syntax/src/sg_sciptect.rs
expression: "dump_document(&document, &contents)"
---
  # Media
  
  ## Logo
  
  - Primary color: `#fc60a8`
  - Secondary color: `#494368`
  - Font: [`Orbitron`](https://fonts.google.com/specimen/Orbitron)
  
  You are free to use and modify the logo for your Awesome list or other usage.

