docker-images/syntax-highlighter/crates/sg-syntax/src/snapshots/sg_syntax__sg_sciptect__test__.__multibyte.cs.snap
---
source: crates/sg-syntax/src/sg_sciptect.rs
assertion_line: 539
expression: "dump_document(&document, &contents)"
---
  using System;
//^^^^^ IdentifierKeyword
//      ^^^^^^ IdentifierNamespace
  
  namespace Example
//^^^^^^^^^ IdentifierNamespace
  {
      public void Something()
//           ^^^^ IdentifierType
//                ^^^^^^^^^ IdentifierFunction
      {
          var x = "世界";
//        ^^^ IdentifierType
//            ^ Identifier
//              ^ IdentifierOperator
//                ^^^^ StringLiteral
          var y = "世界 Hello, 世界";
//        ^^^ IdentifierType
//            ^ Identifier
//              ^ IdentifierOperator
//                ^^^^^^^^^^^^^^ StringLiteral
  
          var emoji = "🥳";
//        ^^^ IdentifierType
//            ^^^^^ Identifier
//                  ^ IdentifierOperator
//                    ^^^ StringLiteral
      }
  }

