docker-images/syntax-highlighter/crates/sg-syntax/src/snapshots/sg_syntax__sg_sciptect__test__.__not_rust.c.snap
---
source: crates/sg-syntax/src/sg_sciptect.rs
assertion_line: 539
expression: "dump_document(&document, &contents)"
---
  #include <stdbool.h>
//^^^^^^^^ IdentifierKeyword
//        ^ IdentifierNamespace
//         ^^^^^^^^^^^ StringLiteral
  
  int main() {
//^^^ IdentifierType
//    ^^^^ IdentifierFunction
    // Single line comment
//  ^^^^^^^^^^^^^^^^^^^^^^ Comment
    int x = 1;
//  ^^^ IdentifierType
//        ^ IdentifierOperator
//          ^ NumericLiteral
  
    /*
     *Multi Line
     */
  
    return x;
//  ^^^^^^ IdentifierKeyword
  }

