docker-images/syntax-highlighter/crates/sg-syntax/src/snapshots/sg_syntax__sg_sciptect__test__.__package.go.snap
---
source: crates/sg-syntax/src/sg_sciptect.rs
assertion_line: 234
expression: "dump_document(&document, &contents)"
---
  package main
//^^^^^^^ IdentifierKeyword
//        ^^^^ Identifier

