docker-images/syntax-highlighter/crates/sg-syntax/src/snapshots/sg_syntax__sg_sciptect__test__.__python.py.snap
---
source: crates/sg-syntax/src/sg_sciptect.rs
expression: "dump_document(&document, &contents)"
---
  @requires_authorization(roles=["ADMIN"])
// ^^^^^^^^^^^^^^^^^^^^^^ Identifier
//                        ^^^^^ Identifier
//                             ^ IdentifierOperator
//                              ^ PunctuationBracket
//                               ^ StringLiteral
//                                ^^^^^^ StringLiteral
//                                      ^ PunctuationBracket
  def somefunc(param1='', param2=0):
//^^^ IdentifierKeyword
//    ^^^^^^^^ IdentifierFunction
//             ^^^^^^ Identifier
//                   ^ IdentifierOperator
//                    ^ StringLiteral
//                     ^ StringLiteral
//                        ^^^^^^ Identifier
//                              ^ IdentifierOperator
//                               ^ NumericLiteral
      r'''A docstring'''
//    ^ IdentifierKeyword
//     ^^^^^^^^^^^^^^^^^ Comment
      if param1 > param2: # interesting
//    ^^ IdentifierKeyword
//              ^ IdentifierOperator
//                        ^^^^^^^^^^^^^ Comment
          print 'Gre\'ater'
//        ^^^^^ IdentifierKeyword
//              ^ StringLiteral
//               ^^^ StringLiteral
//                  ^^ StringLiteralEscape
//                    ^^^^^ StringLiteral
      return (param2 - param1 + 1 + 0b10l) or None
//    ^^^^^^ IdentifierKeyword
//                   ^ IdentifierOperator
//                            ^ IdentifierOperator
//                              ^ NumericLiteral
//                                ^ IdentifierOperator
//                                  ^^^^ NumericLiteral
//                                      ^ IdentifierKeyword
//                                         ^^ IdentifierOperator
//                                            ^^^^ IdentifierBuiltin
  
  class SomeClass:
//^^^^^ IdentifierKeyword
      pass
//    ^^^^ IdentifierKeyword

