docker-images/syntax-highlighter/crates/sg-syntax/src/snapshots/sg_syntax__sg_sciptect__test__.__ruby.rb.snap
---
source: crates/sg-syntax/src/sg_sciptect.rs
expression: "dump_document(&document, &contents)"
---

