docker-images/syntax-highlighter/crates/sg-syntax/src/snapshots/sg_syntax__sg_sciptect__test__.__scala.scala.snap
---
source: crates/sg-syntax/src/sg_sciptect.rs
expression: "dump_document(&document, &contents)"
---
  package foobar
//^^^^^^^ IdentifierKeyword
  
  case class Foo(x: Int) extends AnyVal
//^^^^^ IdentifierKeyword
//     ^^^^^ IdentifierKeyword
//               ^ Identifier
//                  ^^^ IdentifierKeyword
//                       ^^^^^^^ IdentifierKeyword
  object Foo {
//^^^^^^ IdentifierKeyword
    val x = 42
//  ^^^ IdentifierKeyword
//      ^ Identifier
//        ^ IdentifierOperator
//          ^^ NumericLiteral
    val y = 42.0
//  ^^^ IdentifierKeyword
//      ^ Identifier
//        ^ IdentifierOperator
//          ^^^^ NumericLiteral
    val z = s"hello $x" + "hello world"
//  ^^^ IdentifierKeyword
//      ^ Identifier
//        ^ IdentifierOperator
//          ^^^^^^^^ StringLiteral
//                  ^ Identifier
//                   ^ Identifier
//                    ^ StringLiteral
//                        ^^^^^^^^^^^^^ StringLiteral
    def main(args: Array[String]): Unit = {
//  ^^^ IdentifierKeyword
//      ^^^^ IdentifierFunction
//           ^^^^ Identifier
//                                 ^^^^ IdentifierKeyword
//                                      ^ IdentifierOperator
      println(args.toList)
    }
  }

