docker-images/syntax-highlighter/crates/sg-syntax/src/snapshots/sg_syntax__sg_sciptect__test__.__small.c.snap
---
source: crates/sg-syntax/src/sg_sciptect.rs
assertion_line: 554
expression: "dump_document(&document, &contents)"
---
  int main() {
//^^^ IdentifierType
//    ^^^^ IdentifierFunction
    return 0;
//  ^^^^^^ Keyword
//         ^ NumericLiteral
//          ^ PunctuationDelimiter
  }

