docker-images/syntax-highlighter/crates/sg-syntax/src/snapshots/sg_syntax__sg_sciptect__test__.__sql.sql.snap
---
source: crates/sg-syntax/src/sg_sciptect.rs
expression: "dump_document(&document, &contents)"
---
  WITH event_log_stats AS (
//^^^^ IdentifierKeyword
//                     ^^ IdentifierKeyword
      SELECT
//    ^^^^^^ IdentifierKeyword
          NULLIF(COUNT(*) FILTER (WHERE name IN ('ViewCodeMonitoringPage', 'CodeMonitoringPageViewed')), 0) :: INT AS code_monitoring_page_views,
//               ^^^^^ IdentifierFunction
//                     ^ Identifier
//                                ^^^^^ IdentifierKeyword
//                                           ^^ IdentifierKeyword
//                                               ^^^^^^^^^^^^^^^^^^^^^^^^ StringLiteral
//                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^ StringLiteral
//                                                                                                       ^ NumericLiteral
//                                                                                                             ^^^ IdentifierType
//                                                                                                                 ^^ IdentifierKeyword
      FROM event_logs
//    ^^^^ IdentifierKeyword
      WHERE
//    ^^^^^ IdentifierKeyword
          name IN (
//             ^^ IdentifierKeyword
              -- The events that share a line are events that changed names and are aliases of each other
//            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Comment
              'CodeMonitoringLogsPageViewed'
//            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ StringLiteral
          )
  )
  SELECT
//^^^^^^ IdentifierKeyword
      event_log_stats.code_monitoring_page_views,
      event_log_stats.create_code_monitor_page_views,
      trigger_jobs.p90_trigger_run_time
  FROM
//^^^^ IdentifierKeyword
      event_log_stats,
      email_actions,
      slack_actions,
      webhook_actions,
      action_jobs,
      trigger_jobs
  ;

